--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,6 +24,13 @@ section#telefone{
     top: 50%;
     left: 50%;
     background: url('../imagens/frame-iphone.png') no-repeat;
-
     transform: translate(-50%, -50%);
+}
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 472px;
 }
